<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.vfggmail.progettoswe17.clientgeouser.application.MainPage"
    tools:showIn="@layout/activity_main_page">


    <fragment
        android:layout_width="wrap_content"
        android:layout_height="350dp"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:id="@+id/main_map"/>


    <Button
        android:id="@+id/Posizione"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="35dp"
        android:text="@string/trova_utente" />

    <Button
        android:text="@string/update_gps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/Posizione"
        android:layout_alignStart="@+id/Posizione"
        android:layout_marginBottom="12dp"
        android:id="@+id/update" />

    <Button
        android:id="@+id/allUserPositionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/update"
        android:layout_marginStart="24dp"
        android:layout_toEndOf="@+id/update"
        android:text="@string/allUserPosition" />


</RelativeLayout>
