<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_find_user"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.vfggmail.progettoswe17.clientgeouser.application.FindUserActivity">

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/find_page_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/find_spinner"/>



            <EditText
                android:id="@+id/find_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_username"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"
                android:maxLength="30"/>



            <TextView
                android:id="@+id/find_date1"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:textAlignment="center"
                android:layout_marginTop="20dp"
                android:textSize="24dp"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center">

                <Button
                    android:id="@+id/find_date1_buttonDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/find_date" />

                <Button
                    android:id="@+id/find_time1_buttonTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/find_time" />
                />

            </LinearLayout>

            <TextView
                android:id="@+id/find_date2"
                android:layout_width="match_parent"
                android:layout_height="59dp"
                android:textAlignment="center"
                android:layout_marginTop="20dp"
                android:textSize="24dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center">

                <Button
                    android:id="@+id/find_date2_buttonDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/find_date" />

                <Button
                    android:id="@+id/find_time2_buttonTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/find_time" />
                />

            </LinearLayout>

            <Button
                android:id="@+id/find_find_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/find"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>






